test : ObjectMother 패턴을 적용한 간편한 Dto 생성